--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,11 +19,12 @@ dependencies = [
   "langchain-chroma",
 ]
 
-[project.optional-dependencies]
+[dependency-groups]
 dev = [
-  "pytest",
-  "pytest-asyncio",
-  "httpx",
+  "pytest>=9.0.2",
+  "pytest-asyncio>=1.3.0",
+  "httpx>=0.28.1",
+  "ruff>=0.9.0"
 ]
 
 [tool.setuptools.packages.find]
@@ -33,10 +34,3 @@ include = ["app*"]
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 python_files = ["test_*.py"]
-
-[dependency-groups]
-dev = [
-    "httpx>=0.28.1",
-    "pytest>=9.0.2",
-    "pytest-asyncio>=1.3.0",
-]
