--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,6 +7,10 @@
   "features": {
     "ghcr.io/jsburckhardt/devcontainer-features/uv:1": {}
   },
+  "containerEnv": {
+    "UV_LINK_MODE": "copy",
+    "UV_NO_SYNC": "1"
+  },
   "customizations": {
     "vscode": {
       "extensions": [
@@ -16,6 +20,7 @@
         "johnpapa.vscode-peacock"
       ],
       "settings": {
+        "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python3",
         "peacock.color": "#dd0531",
         "peacock.remoteColor": "#dd0531",
         "python.testing.pytestEnabled": true,
