--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,3 +37,12 @@ include = ["app*"]
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 python_files = ["test_*.py"]
+
+[tool.ruff]
+line-length = 120
+
+[tool.ruff.lint]
+select = ["E", "F", "I", "UP", "B", "SIM", "PERF", "PIE", "RUF"]
+
+[tool.ruff.format]
+skip-magic-trailing-comma = false
