--- a/.env.template
+++ b/.env.template
@@ -4,27 +4,22 @@
 # Backend API Keys        #
 ###########################
 GEMINI_API_KEY=
-
+GEMINI_MODEL=
+GEMINI_TEMPERATURE=
+GEMINI_MAX_RETRIES=
 
 ###########################
 # Database Configuration  #
 ###########################
+DATABASE_URL=
+LANGGRAPH_DB_URL=
+LANGGRAPH_INIT_DB=
 POSTGRES_USER=
 POSTGRES_PASSWORD=
 POSTGRES_DB=
-DATABASE_URL=
-
-# Plain postgres URI
-LANGGRAPH_DB_URL=
 
 ###########################
 # RAG                     #
 ###########################
 RAG_DOCS_DIR=
 RAG_VECTOR_DIR=
-
-###########################
-# Embeddings              #
-###########################
-OLLAMA_BASE_URL=
-OLLAMA_EMBED_MODEL=
