--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
   "langchain_google_genai",
   "langchain-core",
   "langchain-chroma",
+  "langchain-openai",
 ]
 
 [dependency-groups]
