--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -19,8 +19,8 @@ on:
         options: [patch, minor, major]
 
 permissions:
-  contents: write   # push tags + create GitHub release
-  packages: write   # push image to GHCR
+  contents: write
+  packages: write
 
 concurrency:
   group: backend-publish-${{ github.ref }}
@@ -45,7 +45,11 @@ jobs:
           echo "Last commit message:"
           echo "$MSG"
 
-          FORCE="${{ inputs.release || 'false' }}"
+          FORCE="false"
+          if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
+            FORCE="${{ github.event.inputs.release }}"
+          fi
+
           if [ "$FORCE" = "true" ]; then
             echo "release=true" >> "$GITHUB_OUTPUT"
             exit 0
@@ -68,7 +72,11 @@ jobs:
           fi
 
           # Manual bump from workflow_dispatch wins
-          BUMP="${{ inputs.bump || '' }}"
+          BUMP=""
+          if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
+            BUMP="${{ github.event.inputs.bump }}"
+          fi
+
           if [ -n "$BUMP" ]; then
             echo "bump=$BUMP" >> "$GITHUB_OUTPUT"
             exit 0
@@ -98,7 +106,11 @@ jobs:
           fi
 
           BUMP="${{ steps.bump.outputs.bump }}"
-          LATEST="$(git tag -l 'v*' --sort=-v:refname | head -n 1 || true)"
+
+          # Only consider clean semver tags: vX.Y.Z
+          LATEST="$(
+            git tag -l 'v[0-9]*.[0-9]*.[0-9]*' --sort=-v:refname | head -n 1 || true
+          )"
 
           if [ -z "$LATEST" ]; then
             MAJOR=0; MINOR=1; PATCH=0
@@ -138,14 +150,11 @@ jobs:
 
       - name: Create GitHub Release from tag (only if releasing)
         if: steps.rel.outputs.release == 'true'
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        shell: bash
-        run: |
-          set -euo pipefail
-          TAG="${{ steps.ver.outputs.tag }}"
-          gh release create "$TAG" --title "$TAG" --generate-notes
-        # GitHub CLI supports --generate-notes for auto release notes. :contentReference[oaicite:2]{index=2}
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: ${{ steps.ver.outputs.tag }}
+          name: ${{ steps.ver.outputs.tag }}
+          generate_release_notes: true
 
       - name: Compute image tags to push
         id: img
