--- a/.github/workflows/mirror-to-subedi-labs.yml
+++ b/.github/workflows/mirror-to-subedi-labs.yml
@@ -10,11 +10,20 @@ jobs:
   mirror:
     runs-on: ubuntu-latest
     steps:
-      - name: Mirror push
+      - name: Mirror branches + tags (skip PR refs)
         env:
           SRC: https://github.com/homebrain-ai/backend.git
           DST: https://x-access-token:${{ secrets.SUBEDI_LABS_AUTOMATION_TOKEN }}@github.com/subedi-labs/homebrain-backend.git
+        shell: bash
         run: |
+          set -euo pipefail
+
           git clone --mirror "$SRC" repo.git
           cd repo.git
-          git push --mirror "$DST"
+
+          # Push all branches (force to keep destination identical)
+          git push --force "$DST" 'refs/heads/*:refs/heads/*'
+
+          # Push all tags (force in case tags move, optional but keeps true mirror behavior)
+          git push --force --tags "$DST"
+
